syntax = "proto3";

package catalog;

import "expr.proto";
import "plan_common.proto";

option optimize_for = SPEED;

message ColumnIndex {
  uint64 index = 1;
}

message StreamSourceInfo {
  map<string, string> properties = 1;
  plan_common.RowFormatType row_format = 2;
  string row_schema_location = 3;
  ColumnIndex row_id_index = 4;
  repeated plan_common.ColumnCatalog columns = 5;
  repeated int32 pk_column_ids = 6;
}

message TableSourceInfo {
  ColumnIndex row_id_index = 1;
  repeated plan_common.ColumnCatalog columns = 2;
  repeated int32 pk_column_ids = 3;
  map<string, string> properties = 4;
}

message Source {
  uint32 id = 1;
  uint32 schema_id = 2;
  uint32 database_id = 3;
  string name = 4;
  oneof info {
    StreamSourceInfo stream_source = 5;
    TableSourceInfo table_source = 6;
  }
  uint32 owner = 7;
}

message Sink {
  uint32 id = 1;
  uint32 schema_id = 2;
  uint32 database_id = 3;
  string name = 4;
  uint32 associated_table_id = 5;
  map<string, string> properties = 6;
  uint32 owner = 7;
  repeated uint32 dependent_relations = 8;
}

message Index {
  uint32 id = 1;
  uint32 schema_id = 2;
  uint32 database_id = 3;
  string name = 4;
  uint32 owner = 5;
  uint32 index_table_id = 6;
  uint32 primary_table_id = 7;
  // Only `InputRef` type index is supported Now.
  // The index of `InputRef` is the column index of the primary table.
  repeated expr.ExprNode index_item = 8;
}

// See `TableCatalog` struct in frontend crate for more information.
message Table {
  uint32 id = 1;
  uint32 schema_id = 2;
  uint32 database_id = 3;
  string name = 4;
  repeated plan_common.ColumnCatalog columns = 5;
  repeated plan_common.ColumnOrder order_key = 6;
  repeated uint32 dependent_relations = 8;
  oneof optional_associated_source_id {
    uint32 associated_source_id = 9;
  }
  bool is_index = 10;
  uint32 index_on_id = 11;
  repeated int32 distribution_key = 12;
  // pk_indices of the corresponding materialize operator's output.
  repeated int32 stream_key = 13;
  bool appendonly = 14;
  uint32 owner = 15;
  map<string, string> properties = 16;
}

message Schema {
  uint32 id = 1;
  uint32 database_id = 2;
  string name = 3;
  uint32 owner = 4;
}

message Database {
  uint32 id = 1;
  string name = 2;
  uint32 owner = 3;
}
